--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "angular": "^1.4.0",
-    "angular-route": "^1.4.0"
+    "angular-route": "^1.4.0",
+    "bootstrap": "^3.3.5",
+    "jquery": "^2.1.4"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
